# ohtu_palautusrepositorio

./: README.md  osamaara.py  tulo.py
viikko1/nhl-statistics-1/: .coverage  coverage.xml
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: test_statistics_service.py
viikko2/git-branch-harjoitus/: Testi.txt  Testi2.txt  index.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/web-login/: .gitignore  log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: test.txt
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/: pylint_report.txt
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py
