[tool.poetry]
name = "poetry-web-example"
version = "0.1.0"
description = "\"A simple web application created using Poetry\""
authors = ["kety <kety.kuusaru@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
jsonpickle = "2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
